# gaul

./: README.md  regeln.md
py/: pyproject.toml
py/src/gaul/: .gitignore  __init__.py  cli.py  convert.py  zugferd.py
semantic_model/: bt_semantic_model.csv  gen.py
templates/: bt_semantic_model.csv  btj2cii.mustache  cii2btj.xslt  common.xslt  gen.py
test/: .gitignore  cii_btj_cii.diff  cii_cii2.diff  kosit_smx.diff  pretty.xslt  pretty_cii.sed  smx_smx2.diff  smx_smx3.diff  test.sh  to_smx.py
test/examples/: i003.cii.xml  latex_pdfa3.tex  minimal.toml
test/other/en16931-cii2ubl/: CII_business_example_01.xml  CII_business_example_02.xml  CII_example1-CreditNote.xml  CII_example1.xml  CII_example1a.xml  CII_example2.xml  CII_example3.xml  CII_example4.xml  CII_example5.xml  CII_example6.xml  CII_example7.xml  CII_example8.xml  CII_example9.xml  README.md  included-notes-bg-1-uncefact.xml  issue1121.xml  issue12.xml  issue20.xml  issue22.xml  issue23.xml  issue28.xml  issue34.xml  issue38-bad.xml  issue47.xml  issue7.xml
