[project]
name = "gaul"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jörg Mische", email = "bobbl@gmx.de" }
]
requires-python = ">=3.12"
dependencies = [
    "chevron>=0.14.0",
    "lxml>=6.1.1",
    "pypdf>=6.13.3",
    "pyyaml>=6.0.3",
    "tomli-w>=1.2.0",
]

[project.scripts]
gaul = "gaul:main"

[build-system]
requires = ["uv_build>=0.11.8,<0.12.0"]
build-backend = "uv_build"
